--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -1,7 +1,6 @@
 {
     "name": "mywebsite",
     "version": "1.0.1",
-    "private": true,
     "devDependencies": {
         "react-scripts": "^1.1.4",
         "redux-devtools": "^3.4.1",
@@ -24,6 +23,7 @@
         "react-dom": "^16.3.2",
         "react-dropzone": "^4.2.10",
         "react-facebook-login": "^4.0.1",
+        "react-google-login": "^3.2.1",
         "react-image-upload": "0.0.1",
         "react-images-upload": "^1.0.6",
         "react-images-uploader": "^1.2.0-rc1",
@@ -36,6 +36,7 @@
         "react-select": "^2.0.0-beta.6",
         "react-slick": "^0.23.1",
         "redux": "^3.5.2",
+        "redux-promise-middleware": "^5.1.1",
         "redux-thunk": "^2.2.0",
         "sass": "^1.3.2"
     },
@@ -45,5 +46,5 @@
         "eject": "react-scripts eject",
         "test": "react-scripts test"
     },
-    "proxy": "http://localhost:3001"
+    "proxy": "http://henhoradio.com:3001"
 }
