--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -16,6 +16,7 @@
         "lodash": "^4.17.5",
         "moment": "^2.22.1",
         "normalizr": "^3.2.4",
+        "nouislider": "^10.0.0",
         "prop-types": "^15.6.1",
         "react": "^16.3.2",
         "react-carousel": "^4.3.0",
@@ -41,7 +42,7 @@
         "sass": "^1.3.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "set HTTPS=true&&react-scripts start",
         "build": "react-scripts build",
         "eject": "react-scripts eject",
         "test": "react-scripts test"
