--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
     },
     "private": true,
     "devDependencies": {
-        "react-scripts": "^1.1.4",
-        "redux-devtools": "^3.4.1",
-        "redux-devtools-dock-monitor": "^1.1.3",
-        "redux-devtools-log-monitor": "^1.4.0",
-        "redux-logger": "^3.0.6",
-        "uuid": "^3.2.1",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
         "babel-polyfill": "^6.26.0",
@@ -20,21 +14,42 @@
         "babel-preset-stage-0": "^6.24.1",
         "bulma": "^0.7.1",
         "css-loader": "^1.0.0",
+        "extract-loader": "^2.0.1",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "file-loader": "^1.1.11",
         "node-sass": "^4.9.3",
+        "react-scripts": "^1.1.4",
+        "redux-devtools": "^3.4.1",
+        "redux-devtools-dock-monitor": "^1.1.3",
+        "redux-devtools-log-monitor": "^1.4.0",
+        "redux-logger": "^3.0.6",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.22.1",
+        "uuid": "^3.2.1",
         "webpack": "^4.16.5",
         "webpack-cli": "^3.1.0"
     },
     "dependencies": {
+        "antd": "^3.8.2",
+        "async": "^2.6.0",
+        "bcryptjs": "^2.4.3",
+        "dateformat": "^3.0.3",
         "draft-js": "^0.10.5",
+        "ejs": "^2.5.9",
+        "express": "^4.16.0",
+        "express-cassandra": "^2.2.0",
+        "face-recognition": "^0.9.2",
         "humps": "^2.0.0",
         "jquery": "^3.3.1",
+        "jsonwebtoken": "^8.2.1",
         "lodash": "^4.17.5",
-        "moment": "^2.22.1",
+        "mini-css-extract-plugin": "^0.4.1",
+        "moment": "^2.22.2",
+        "multer": "^1.3.0",
         "normalizr": "^3.2.4",
         "nouislider": "^10.0.0",
+        "opencv4nodejs": "^4.5.1",
+        "postcss-loader": "^3.0.0",
         "prop-types": "^15.6.1",
         "react": "^16.3.2",
         "react-carousel": "^4.3.0",
@@ -58,20 +73,11 @@
         "redux-promise-middleware": "^5.1.1",
         "redux-thunk": "^2.2.0",
         "sass": "^1.3.2",
-        "async": "^2.6.0",
-        "bcryptjs": "^2.4.3",
-        "dateformat": "^3.0.3",
-        "ejs": "^2.5.9",
-        "express": "^4.16.0",
-        "express-cassandra": "^2.2.0",
-        "face-recognition": "^0.9.2",
-        "jsonwebtoken": "^8.2.1",
-        "multer": "^1.3.0",
-        "opencv4nodejs": "^4.5.1",
         "sharp": "^0.20.2"
     },
     "scripts": {
         "start": "node app",
+        "https": "set HTTPS=true&&react-scripts start",
         "build": "webpack"
     }
 }
